# xts-selector

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml  xts_haps.txt
config/: README.md  api_topics.json  area_owners.json  broad_infrastructure_files.json  changed_file_exclusions.json  composite_mappings.json  cpp_macro_patterns.json  cpp_naming_patterns.json  family_aliases.json  fanout_policies.json  fanout_targets.json  file_category_rules.json  golden_100_candidates.json  golden_baseline_20260512.json  golden_pr_set.json  golden_review_progress.md  infra_profiles.json  manual_path_overrides.json  path_rules.json  ranking_rules.json  sdk_member_aliases.json  selector.example.json  source_layers.json  symbol_topic_hints.json
docs/: ACCURACY_IMPROVEMENT_ROADMAP.md  ACE_ENGINE_ARCHITECTURE.md  AGENT-RULES-UPDATE-REPORT-2026-05-20.md  AGENT-RULES.md  ALPHABET-INDEXER-GAP-FIX-REPORT-2026-05-19.md  API-GRAPH-FIXTURES-V1-REPORT-2026-05-19.md  API_LINEAGE_GRAPH.md  API_XTS_PRECISION_ARCHITECTURE_DESIGN_PLAN.md  API_XTS_QUALITY_IMPLEMENTATION_PLAN.md  API_XTS_QUALITY_POST_PHASE10_BACKLOG.md  API_XTS_QUALITY_REVIEW_FIX_COMMIT_1a33a0d.md  API_XTS_QUALITY_RUN_20260506_ANALYSIS.md  API_XTS_QUALITY_RUN_300PR.md  API_XTS_QUALITY_TASK_HANDOFF.md  ARCHITECTURE.md  ARCHITECTURE_V1.md  AUDIT-NO-FALSE-MUSTRUN.md  BACKLOG.md  BATCH_REPLAY_AND_CACHING.md  BATCH_VALIDATION_PHASE12_REPORT.md  BENCHMARK_STRATEGY.md  CANONICAL_ACCURACY_DIAGNOSTIC.md  CANONICAL_RATE_IMPROVEMENT_PLAN.md  CHANGED-SYMBOL-CLI-REPORT-2026-05-19.md  CLAUDE-CODE-WORKFLOW-REPORT.md  (+105 more)
(+520 files in other folders)
